# Car-IV-Firmware

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: build.yml  nucleol476rg-CAN-dev.yml
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Firmware/DashBoard/: .mxproject  CMakeLists.txt  ozone.jdebug  testboard-base.ioc
Firmware/DashBoard/Core/Inc/: FreeRTOSConfig.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Firmware/DashBoard/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_hal_timebase_tim.c  stm32l4xx_it.c
Firmware/DashBoard/USB_DEVICE/App/: usbd_cdc_if.c  usbd_desc.c
Firmware/DashBoard/User/Inc/: threads.h  user.hpp
Firmware/DashBoard/User/Src/: threads.cpp  user.cpp
Firmware/Front-VCU/: .mxproject  CMakeLists.txt  ozone.jdebug  testboard-base.ioc
Firmware/Front-VCU/Core/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Firmware/Front-VCU/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
Firmware/Front-VCU/USB_DEVICE/App/: usbd_cdc_if.h
Firmware/Front-VCU/User/Inc/: user.hpp
Firmware/Front-VCU/User/Src/: user.cpp
Firmware/MotorController/: .mxproject  CMakeLists.txt  testboard-base.ioc
Firmware/MotorController/Core/Inc/: main.h  stm32l4xx_hal_conf.h
Firmware/MotorController/Core/Src/: main.c  stm32l4xx_hal_msp.c
Firmware/MotorController/User/Inc/: user.hpp
Firmware/MotorController/User/Src/: threads.cpp  user.cpp
Firmware/Power_Board_Testing/Power_Board_Testing/: --Makefile  .mxproject  .project  CMakeLists.txt  Power_Board_Testing.ioc  stm32l496rgtx_flash.ld
Firmware/VCU-v2/: .mxproject  VCU-v2.ioc
Firmware/VCU-v2/Core/Inc/: main.h  stm32l4xx_hal_conf.h
Firmware/VCU-v2/Core/Src/: main.c  stm32l4xx_hal_msp.c
Firmware/VCU-v2/User/Inc/: threads.h
Firmware/andrew-junior-design/: CMakeLists.txt
Firmware/bms-primary/: .mxproject  bms-primary.ioc  ozone.jdebug
Firmware/bms-primary/Core/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Firmware/bms-primary/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
Firmware/bms-primary/User/Inc/: threads.h  user.hpp
Firmware/bms-primary/User/Src/: threads.cpp  user.cpp
Firmware/bms-prototype2/: .mxproject  .project  CMakeLists.txt  bms-prototype2.ioc  ozone.jdebug
Firmware/bms-prototype2/Core/Inc/: stm32l4xx_hal_conf.h
Firmware/bms-prototype2/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_hal_timebase_tim.c  stm32l4xx_it.c
Firmware/bms-prototype2/User/Inc/: user.hpp
Firmware/bms-prototype2/User/Src/: cli.cpp  lib.cpp  user.cpp
Firmware/bms-secondary/: CMakeLists.txt  bms-secondary.ioc  ozone.jdebug
Firmware/bms-secondary/Core/Inc/: stm32l4xx_hal_conf.h  stm32l4xx_it.h
Firmware/bms-secondary/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_hal_timebase_tim.c  stm32l4xx_it.c
Firmware/bms-secondary/User/Inc/: threads.h  user.hpp
Firmware/bms-secondary/User/Src/: threads.cpp  user.cpp
Firmware/bms-v1/: .mxproject  CMakeLists.txt  bms-v1.ioc
Firmware/bms-v1/Core/Inc/: main.h  stm32l4xx_hal_conf.h
Firmware/bms-v1/Core/Src/: main.c  stm32l4xx_hal_msp.c
Firmware/bms-v2/: bms-v2.ioc
Firmware/ethernet_v0/: .mxproject  CMakeLists.txt  STM32H723VETx_FLASH.ld  ethernet_v0.ioc
Firmware/ethernet_v0/cmake/: gcc-arm-none-eabi.cmake
Firmware/ethernet_v0/cmake/stm32cubemx/: CMakeLists.txt
Firmware/matthew-junior-design/: .mxproject  CMakeLists.txt  Makefile  nucleof072rb-base.ioc  ozone.jdebug  testboard-base.ioc
Firmware/nucleof072rb-base/: .mxproject  CMakeLists.txt  Makefile  nucleof072rb-base.ioc
Firmware/nucleof076rb-base/: CMakeLists.txt
Firmware/nucleol476rg-CAN-dev/: .mxproject  CMakeLists.txt  Makefile  nucleol476rg-CAN-dev.ioc  nucleol476rg-base.ioc  ozone.jdebug
Firmware/nucleol476rg-base/: CMakeLists.txt  Makefile  ozone.jdebug
Firmware/pdu/pdu/: .mxproject  pdu.ioc
Firmware/rear-vcu-v1/: .mxproject  CMakeLists.txt  ozone.jdebug  rear-vcu-v1.ioc
Firmware/steering-2023/: .mxproject  CMakeLists.txt  SteeringWheel2023.ioc
Firmware/steering-dev/: .mxproject  .project  CMakeLists.txt  Makefile  SteeringWheel2023.ioc  steering-dev.ioc  steering-dev.jdebug
Firmware/testboard-CAN-dev/: .mxproject  CMakeLists.txt  Makefile  ozone.jdebug  testboard-base.ioc
Firmware/testboard-INA/: .project  CMakeLists.txt  ozone.jdebug
Firmware/testboard-base/: .mxproject  CMakeLists.txt  Makefile  testboard-base.ioc
Firmware/testboard-base/Core/Inc/: main.h
Firmware/testboard-base/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
Firmware/testboard-base/User/Inc/: user.hpp
Firmware/testboard-base/User/Src/: user.cpp
Firmware/testboard-commander/: .mxproject  CMakeLists.txt  docs.md  ozone.jdebug  testboard-commander.ioc
Firmware/testboard-longbutton/: CMakeLists.txt  testboard-base.ioc
Firmware/testing_steering/: .mxproject  steering-dev.ioc  steering-dev.jdebug
Firmware/vcu/: .mxproject  CMakeLists.txt  STM32L496RGTx_FLASH.ld  notes.txt  ozone.jdebug  vcu.ioc
Firmware/vcu-v2/: .mxproject  CMakeLists.txt  vcu-v2.ioc
Firmware/vcu/Core/Inc/: FreeRTOSConfig.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Firmware/vcu/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
Firmware/vcu/User/Inc/: fatfs_sd.h  ffconf.h  threads.h  user.hpp  user_config.h
Firmware/vcu/User/Src/: fatfs_sd.c  threads.cpp  user.cpp
Resources/CMake/: arm-cm0.cmake  arm-cm4.cmake  arm-none-eabi.cmake
Resources/Debug/: FreeRTOSPlugin_ARM.js
Resources/Drivers/DataModules/: CustomBMSFrames.hpp  DataModule.hpp  DriverControls.hpp  IoTestFrame.hpp  MPPTFrames.hpp  MitsubaFrame1.hpp  MitsubaFrames.hpp  MotorControl.hpp  MotorControlFrame.hpp  OrionBMSFrames.hpp  PowerBoard.hpp  ProhelionBPS.hpp  VCUFrame.hpp
Resources/Drivers/Legacy_BSP/: LICENSE
Tools/: avstack.pl
Tools/gnu/: stubs-32.h
nucleol476rg-base/: Makefile
nucleol476rg-base/Core/Inc/: stm32l4xx_it.h
nucleol476rg-base/User/Inc/: user.hpp
(+273 files in other folders)
